# malaysia-marketplace-scrapper

./: .env  .gitignore  CHANGELOG.md  INSTALLATION_GUIDE.md  MANIFEST.in  PROJECT_OVERVIEW.md  README.md  README_WEB.md  advanced_analyzer.py  base_scraper.py  config.py  facebook_marketplace_scraper.py  hasil_pencarian_baby_care_20250704_090323.txt  hasil_pencarian_samsung_a7_20250704_092357.json  install.bat  install.sh  lazada_scraper.py  logger.py  main.py  mudah_scraper.py  multi_platform_scraper.py  pyproject.toml  requirements.txt  results_laptop.json  setup.py  shopee_scraper.py  start_web.py  tokopedia_scraper.py
api/: __init__.py  app.py  database.py  models.py
api/routes/: analytics.py  export.py  history.py  search.py
final_demo_output/: comprehensive_demo_20250704_083038.json
frontend/src/: App.jsx
frontend/src/components/charts/: PriceChart.jsx  RatingChart.jsx  SalesChart.jsx
frontend/src/components/common/: Button.jsx  ErrorBoundary.jsx  Loading.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/results/: ProductCard.jsx  ProgressIndicator.jsx  ResultsTable.jsx
frontend/src/components/search/: FilterPanel.jsx  PlatformSelector.jsx  SearchForm.jsx
frontend/src/hooks/: useHistory.js  useSearch.js  useWebSocket.js
frontend/src/pages/: BestSellersPage.jsx  ComparisonPage.jsx  HistoryPage.jsx  HomePage.jsx  SearchPage.jsx
frontend/src/services/: analyticsService.js  api.js  exportService.js  historyService.js  searchService.js  websocket.js
frontend/src/utils/: formatters.js  validators.js
