[build-system]
requires = ["setuptools>=45.0.0", "wheel>=0.36.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malaysia-marketplace-scraper"
version = "1.0.0"
description = "Multi-platform e-commerce scraper for Malaysian marketplaces (Shopee, Lazada, Mudah)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Malaysia Marketplace Scraper Team", email = "your-email@example.com"}
]
keywords = ["scraper", "ecommerce", "malaysia", "shopee", "lazada", "mudah", "marketplace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "selenium>=4.0.0",
    "pandas>=1.3.0",
    "lxml>=4.6.0",
    "fake-useragent>=1.1.0",
    "python-dotenv>=0.19.0",
    "openpyxl>=3.0.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "wordcloud>=1.8.0",
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "aiofiles>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/malaysia-marketplace-scraper"
"Bug Reports" = "https://github.com/yourusername/malaysia-marketplace-scraper/issues"
"Source" = "https://github.com/yourusername/malaysia-marketplace-scraper"

[project.scripts]
malaysia-scraper = "main:main"

[tool.setuptools]
py-modules = [
    "main",
    "multi_platform_scraper",
    "base_scraper",
    "shopee_scraper",
    "lazada_scraper",
    "mudah_scraper",
    "facebook_marketplace_scraper",
    "tokopedia_scraper",
    "advanced_analyzer",
    "config",
    "logger"
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
